# cmake_sdl2_glad_template

./: .gitignore  .gitmodules  CMakeLists.txt  run.sh
src/: main.cpp
